# lupine

./: .gitignore  CMakeLists.txt  Dockerfile  NOTICE  README.md  cache.cpp  cache.h  checkpoint.cpp  checkpoint.h  checkpoint_provider.h  checkpoint_test.cpp  client.cpp  client.exports  client_callback.cpp  client_callback.h  client_routing.cpp  client_routing.h  compress.cpp  copy_pipeline.cpp  copy_pipeline.h  cuda_compat.h  dirty_ranges.h  fake_checkpoint_provider.c  gpu_snapshot.cpp  gpu_snapshot.h  gpu_snapshot_client.cpp  gpu_snapshot_xlate.h  h2.cpp  h2_test.cpp  ipc.cpp  ipc.h  local.sh  lupine_attr_sizes.h  lupine_fatbin.h  lupine_launch_attributes.h  lupine_log.h  lupine_platform.h  manual_server.cpp  manual_server.h  memcpy.cpp  (+21 more)
.github/workflows/: build-cuda-matrix.yml  build-lambda-client.yml  build-windows-server-exe.yml  codegen.yaml  format.yml  gpu-integration-gcloud.yml  pr-test.yaml  publish-client-image.yml  publish-pytorch-worker-image.yml  publish-server-image.yml  publish.yml  python.yml  seed-cuda-samples-cache.yml  tsan.yml  unit-tests.yml
codegen/: README.md  annotations.h  codegen.py  gen_api.h  gen_client.cpp  gen_nvml_client.inc  gen_nvml_server.h  gen_nvml_server.inc  gen_server.cpp  ops.py
codegen/tests/: test_generated_server_cleanup.py
python/: README.md  pyproject.toml
python/examples/: tensor.py
python/lupine/: __init__.py  _sidecar_worker.py  remote.py  sidecar.py  tensor.py  worker.py
python/tests/: sidecar_test.py  tensor_test.py  test_lupine_adapter.py  test_sidecar_lifecycle.py  test_snapshot_integration.py  test_snapshot_pytorch_integration.py
test/: benchmark_ctx_routing.cu  benchmark_managed_dirty_sync.cu  pytorch_lupine_tests.py  rpc_test.cpp  run_cuda_samples.sh  run_custom_tests.sh  run_pytorch_lupine_tests.sh  test_async_htod_concurrent_lanes.cu  test_async_htod_context_lifecycle.cu  test_async_htod_staging_cleanup.cu  test_checkpoint_provider.c  test_client_connection_setup.cpp  test_client_connection_setup.exports  test_context_routing_cache.cu  test_cross_server_d2d.cu  test_cross_server_d2d_async.cu  test_cuLaunchKernelEx_attributes.cu  test_cuLibraryLoadData_options.cu  test_cublas_create.cu  test_cuda_graph_api.cu  test_cuda_graph_kernel_node_params.cu  test_cuda_user_object_procaddr.cu  test_device_printf_capture.cu  test_gpu_snapshot.cu  test_host_callback_userdata.cu  test_host_func_dtoh.cu  test_kernel_param_layout_cache.cu  test_managed_dirty_tracking.cu  test_managed_sparse_device_sync.cu  test_module_image_overflow.cpp  test_output_only_null_param.cu  test_server_checkpoint.cpp  test_server_registry.cpp  test_server_sigterm.cpp  test_stdout_capture_lanes.cu  test_stream_callback_route.cu  test_stream_scoped_dtoh.cu  test_sync_dtoh_pipeline.cu  test_sync_htod_context_recreate.cu  test_sync_htod_pipeline.cu  (+2 more)
test/gpu-integration/: Dockerfile
